# AIForge

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  LAUNCH_PLAYBOOK.md  README.md  biome.json  docker-compose.yml  package.json  page-inspection-report.md  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.husky/: commit-msg
apps/backend/: Dockerfile  package.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/agents/: chat_agent.py  orchestrator.py  rag_agent.py
apps/backend/app/core/: config.py  observability.py  supabase.py
apps/backend/app/models/: chat.py
apps/backend/app/routers/: chat.py
apps/backend/app/services/: vector_store.py
apps/backend/tests/: test_health.py
apps/mobile/: app.json  global.css  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  chat.tsx  index.tsx
apps/mobile/components/: logo.tsx  theme-toggle.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/chat/: page.tsx
apps/web/components/: logo.tsx  theme-toggle.tsx
apps/web/lib/: supabase-browser.ts  supabase-server.ts
apps/web/public/: manifest.json  sw.js
docs/: UPGRADE_EXPO55.md
supabase/: config.toml
supabase/functions/ai-chat/: index.ts
supabase/functions/embed/: index.ts
supabase/functions/webhook/: index.ts
(+1 files in other folders)
